# python-isal

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  benchmark.py  bgzip_runner.py  buildwheels.sh  codecov.yml  gzipread128kblocks.py  profile_igzipreader.py  pyproject.toml  requirements-docs.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  release_checklist.md
.github/workflows/: ci.yml
benchmark_scripts/: benchmark.py  benchmark_cgzipreader.py  gzipread128kblocks.py  gzipreadlines.py  gzipthreadsread128kblocks.py  gzipwrite128kblocks.py  gzipwritelines.py  memory_leak_test.py  profile_igziplinewriter.py  profile_igzipreader.py
docs/: conda-environment.yml  conf.py  igzip.rst  index.rst  isal_zlib.rst
docs/includes/: Installation.rst  igzip.rst  isal.igzip_usage.rst  isal_zlib.rst
src/isal/: __init__.py  _bgzip.pyi  _bgzipmodule.c  _gzip_copy.py  _isal.c  _isal.pxd  _isal.pyi  _isal.pyx  _isalmodule.c  _version.pyi  cpython_gzip3_11.py  crc.pxd  crc32_combine.h  igzip.py  igzip_lib.c  igzip_lib.pxd  igzip_lib.pyi  igzip_lib.pyx  igzip_lib_impl.h  igzip_libmodule.c  igzip_threaded.py  isal_shared.h  isal_zlib.c  isal_zlib.pyi  isal_zlib.pyx  isal_zlib_impl.h  isal_zlibmodule.c  isalmodule.c  py.typed  pycore_blocks_output_buffer.md  pycore_blocks_output_buffer.pxd  python_args.h  version.pxd  zlib.pyx
src/isal/headers/: crc.pxd  igzip_lib.pxd  isal.pxd
src/isal/isa-l/: README
tests/: test_compat.py  test_freethreading.py  test_gzip_compliance.py  test_igzip.py  test_igzip_cli.py  test_igzip_lib.py  test_igzip_threaded.py  test_isal.py  test_isal_zlib.py  test_zlib_compliance.py  tests_igzip_threaded.py
tests/data/: 512kb.txt  README.md  seeds.txt
